portainer/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: "portainer"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: portainer.k8s.singhjee.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
